--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,1 @@
-All the files in the repository is done by 
-Abdullahi muhammad zaifada <abdulzaifada81@gmail.com>
+# All the files in this repository is about AirBNB clone that is done by Abdullahi muhammad zaifada <abdulzaifada81@gmail.com>
